talha/v1-f-dev - working on UI

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -53,8 +53,17 @@
 
 /* #region Global */
 body {
-  font-family: 'nunitoRegular', sans-serif;
   overflow-x: hidden;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'nunitoRegular', sans-serif;
 }
 
 /* Chrome, Safari, Edge, Opera */
